--- a/source/index.html
+++ b/source/index.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Погнали</title>
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="page-header">
     <div class="page-header__logo header-logo">
-      <span class="header-logo__title">Погнали?</span>
+      <img class="header-logo__image" src="img/logo-mobile-white@1x.png" width="100" height= "19" alt="Логотип Погнали">
     </div>
     <nav class="main-nav">
+      <!--TODO: заменить кнопку на бургер-->
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </nav>
     <p class="page-header__text">В путешествие с крутыми попутчиками!</p>
-    <img class="page-header__image" src="https://via.placeholder.com/192x255" width="192" height="255" alt="Путешественник с чемоданом">
+    <img class="page-header__image" src="img/traveller-illustration-mobile@1x.png" width="192" height="255" alt="Путешественник с чемоданом">
     <div class="user-nav">
       <a class="user-nav__button user-nav__button--phone" href="tel:">
         <span class="visually-hidden">Позвонить нам</span>
@@ -40,17 +40,25 @@
         </p>
         <cite class="feedback-quote__author">
           Мурат Эльтазин<br>
-          главный редактор газеты &raquo;гаджетлайф&laquo;
+          главный редактор газеты &laquo;гаджетлайф&raquo;
         </cite>
       </blockquote>
     </section>
     <section class="user-path">
       <h2 class="visually-hidden">Порядок действий</h2>
       <ol class="path-list">
-        <li class="path-list__item">Выберите направление</li>
-        <li class="path-list__item">Изучите идеи путешественников</li>
-        <li class="path-list__item">Находите тех, кто похож на ваc</li>
-        <li class="path-list__item">Путешествуйте вместе!</li>
+        <li class="path-list__item">
+          <span class="path-list__item-text">Выберите направление</span>
+        </li>
+        <li class="path-list__item">
+          <span class="path-list__item-text">Изучите идеи путешественников</span>
+        </li>
+        <li class="path-list__item">
+          <span class="path-list__item-text">Находите тех,<br> кто похож на ваc</span>
+        </li>
+        <li class="path-list__item">
+          <span class="path-list__item-text">Путешествуйте вместе!</span>
+        </li>
       </ol>
     </section>
     <section class="about">
@@ -71,7 +79,7 @@
       </p>
       <ul class="destinations-list">
         <li class="destination">
-          <img class="destination__image" src="https://via.placeholder.com/270x110" width="270" height="110" alt="Острова Тайланда">
+          <img class="destination__image" src="img/thailand-mobile@1x.jpg" width="270" height="110" alt="Острова Тайланда">
           <div class="destination__description">
             <h3 class="destination__title">Тайланд</h3>
             <p class="destination__text">Джунгли зовут!</p>
@@ -79,7 +87,7 @@
           </div>
         </li>
         <li class="destination">
-          <img class="destination__image" src="https://via.placeholder.com/270x110" width="270" height="110" alt="Улицы Парижа">
+          <img class="destination__image" src="img/france-mobile@1x.jpg" width="270" height="110" alt="Улицы Парижа">
           <div class="destination__description">
             <h3 class="destination__title">Франция</h3>
             <p class="destination__text">Трэ бьен, манифик!</p>
@@ -87,7 +95,7 @@
           </div>
         </li>
         <li class="destination">
-          <img class="destination__image" src="https://via.placeholder.com/270x110" width="270" height="110" alt="Река в Праге">
+          <img class="destination__image" src="img/czech-mobile@1x.jpg" width="270" height="110" alt="Река в Праге">
           <div class="destination__description">
             <h3 class="destination__title">Чехия</h3>
             <p class="destination__text">Закоулки старой Европы</p>
@@ -96,7 +104,10 @@
         </li>
       </ul>
       <a class="destinations__show-all" href="#">
-        Показать все
+        <span class="destinations__show-all-text">Показать все</span>
+        <svg class="destinations__show-all-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 14">
+          <polygon points="0,14 0,0.1 10,7.1" />
+        </svg>
       </a>
     </section>
     <section class="companions">
@@ -110,113 +121,126 @@
       </p>
       <ul class="companions-list">
         <li class="companion">
-          <h3 class="companion__name companion__name--offline">Таня Фирсова</h3>
-          <img class="companion__image" src="https://via.placeholder.com/270x270" width="270" height="270" alt="Фото попутчика">
+          <h3 class="companion__header">
+            <span class="companion__name">Таня Фирсова</span>
+          </h3>
+          <img class="companion__image" src="img/firsova-desktop@1x.jpg" width="270" height="270" alt="Фото попутчика">
           <div class="companion__description">
-            <div class="companion__level">99</div>
-            <ul class="country-list">
-              <li class="country-list__item">
-                <img class="country-list__item-flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Шри Ланка">
-                <span class="visibility-hidden">Шри Ланка</span>
+            <div class="companion__level">
+              <span class="companion__level-value">99</span>
+              <span class="companion__level-title">level</span>
+            </div>
+            <ul class="companion__country-list">
+              <li class="companion__country-item country">
+                <img class="country__flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Шри Ланка">
+                <span class="visually-hidden">Шри Ланка</span>
               </li>
-              <li class="country-list__item">
-                <img class="country-list__item-flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Тайланд">
-                <span class="visibility-hidden">Тайланд</span>
+              <li class="companion__country-item country">
+                <img class="country__flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Тайланд">
+                <span class="visually-hidden">Тайланд</span>
               </li>
-              <li class="country-list__item">
-                <img class="country-list__item-flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Сейшелы">
-                <span class="visibility-hidden">Сейшелы</span>
+              <li class="companion__country-item country">
+                <img class="country__flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Сейшелы">
+                <span class="visually-hidden">Сейшелы</span>
               </li>
             </ul>
-            <div class="companion__tags">
-              <ul class="tag-list">
-                <li class="tag-list__item">#ЗОЖ</li>
-                <li class="tag-list__item">#ПП</li>
-                <li class="tag-list__item">#Фитнес</li>
-                <li class="tag-list__item">#пляж</li>
-                <li class="tag-list__item">#авокадо</li>
-                <li class="tag-list__item">#смузи</li>
-              </ul>
-            </div>
-            <ul class="transport">
-              <li class="transport__item transport__item--active">
+            <ul class="companion__tags tag-list">
+              <li class="tag-list__item">#ЗОЖ</li>
+              <li class="tag-list__item">#ПП</li>
+              <li class="tag-list__item">#Фитнес</li>
+              <li class="tag-list__item">#пляж</li>
+              <li class="tag-list__item">#авокадо</li>
+              <li class="tag-list__item">#смузи</li>
+            </ul>
+            <ul class="companion__transport transport">
+              <li class="transport__item transport__item--plane transport__item--active">
                 <span class="visually-hidden">Самолет</span>
               </li>
-              <li class="transport__item">
+              <li class="transport__item transport__item--bus transport__item--active">
                 <span class="visually-hidden">Автобус</span>
               </li>
-              <li class="transport__item">
+              <li class="transport__item transport__item--bike">
                 <span class="visually-hidden">Велосипед</span>
               </li>
-              <li class="transport__item">
+              <li class="transport__item transport__item--hike transport__item--active">
                 <span class="visually-hidden">Пешие путешествия</span>
               </li>
             </ul>
           </div>
         </li>
         <li class="companion">
-          <h3 class="companion__name companion__name--online">Петя Демин</h3>
-          <img class="companion__image" src="https://via.placeholder.com/270x270" width="270" height="270" alt="Фото попутчика">
+          <h3 class="companion__header">
+            <span class="companion__name companion__name--online">Петя Демин</span>
+          </h3>
+          <img class="companion__image" src="img/demin-desktop@1x.jpg" width="270" height="270" alt="Фото попутчика">
           <div class="companion__description">
-            <div class="companion__level">80</div>
-            <ul class="country-list">
-              <li class="country-list__item">
-                <img class="country-list__item-flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Германия">
-                <span class="visibility-hidden">Германия</span>
+            <div class="companion__level">
+              <span class="companion__level-value">80</span>
+              <span class="companion__level-title">level</span>
+            </div>
+            <ul class="companion__country-list">
+              <li class="companion__country-item country">
+                <img class="country__flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Германия">
+                <span class="visually-hidden">Германия</span>
               </li>
-              <li class="country-list__item">
-                <img class="country-list__item-flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Чехия">
-                <span class="visibility-hidden">Чехия</span>
+              <li class="companion__country-item country">
+                <img class="country__flag" src="https://via.placeholder.com/35x24" width="35" height="24" alt="Флаг Чехия">
+                <span class="visually-hidden">Чехия</span>
               </li>
             </ul>
-            <div class="companion__tags">
-              <ul class="tag-list">
-                <li class="tag-list__item">#бургер</li>
-                <li class="tag-list__item">#бар</li>
-                <li class="tag-list__item">#футбол</li>
-                <li class="tag-list__item">#концерт</li>
-                <li class="tag-list__item">#крафт</li>
-              </ul>
-            </div>
-            <ul class="transport">
-              <li class="transport__item transport__item--active">
+            <ul class="companion__tags tag-list">
+              <li class="tag-list__item">#бургер</li>
+              <li class="tag-list__item">#бар</li>
+              <li class="tag-list__item">#футбол</li>
+              <li class="tag-list__item">#концерт</li>
+              <li class="tag-list__item">#крафт</li>
+            </ul>
+            <ul class="companion__transport transport">
+              <li class="transport__item transport__item--plane transport__item--active">
                 <span class="visually-hidden">Самолет</span>
               </li>
-              <li class="transport__item transport__item--active">
+              <li class="transport__item transport__item--bus transport__item--active">
                 <span class="visually-hidden">Автобус</span>
               </li>
-              <li class="transport__item">
+              <li class="transport__item transport__item--bike">
                 <span class="visually-hidden">Велосипед</span>
               </li>
-              <li class="transport__item transport__item--active">
+              <li class="transport__item transport__item--hike transport__item--active">
                 <span class="visually-hidden">Пешие путешествия</span>
               </li>
             </ul>
           </div>
         </li>
       </ul>
-      <a class="companions__show-all" href="#">Показать всеx</a>
+      <a class="companions__show-all" href="#">
+        <span class="destinations__show-all-text">Показать всеx</span>
+        <svg class="destinations__show-all-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 14">
+          <polygon points="0,14 0,0.1 10,7.1" />
+        </svg>
+      </a>
     </section>
     <section class="profile">
-      <h2 class="profile__header header">Добавьте свой профиль</h2>
-      <img class="profile__image" src="https://via.placeholder.com/99x99" width="99" height="99" alt="Сбособ оплаты">
-      <ol class="profile-list">
-        <li class="profile-option">
-          <p class="profile-option__title">Базовое размещение</p>
-          <p class="profile-option__price">Бесплатно</p>
-        </li>
-        <li class="profile-option">
-          <p class="profile-option__title">Вывод на первых позициях</p>
-          <p class="profile-option__price">99 руб./мес</p>
-        </li>
-        <li class="profile-option">
-          <p class="profile-option__title">Кастомный цвет карточки<p>
-          <p class="profile-option__price">59 руб./мес</p>
-        </li>
-      </ol>
-      <a class="profile__show-for-business" href="#">
-        Показать тарифы для бизнеса
-      </a>
+      <div class="profile__flex-wrapper">
+        <h2 class="profile__header header">Добавьте свой профиль</h2>
+        <img class="profile__image" src="img/rates@1x.png" width="99" height="99" alt="Сбособ оплаты">
+        <ol class="profile-list">
+          <li class="profile-option">
+            <p class="profile-option__title">Базовое размещение</p>
+            <p class="profile-option__price">Бесплатно</p>
+          </li>
+          <li class="profile-option">
+            <p class="profile-option__title">Вывод на первых позициях</p>
+            <p class="profile-option__price">99 руб./мес</p>
+          </li>
+          <li class="profile-option">
+            <p class="profile-option__title">Кастомный цвет карточки</p>
+            <p class="profile-option__price">59 руб./мес</p>
+          </li>
+        </ol>
+        <a class="profile__show-for-business" href="#">
+          Показать тарифы для бизнеса
+        </a>
+      </div>
     </section>
     <section class="contacts">
       <h2 class="contacts__header">Заинтересовались?</h2>
@@ -226,7 +250,9 @@
         <span class="contacts__text contacts__text--decorated">авторизуйтесь!</span>
       </p>
       <form class="contacts__form send-email" action="https://echo.htmlacademy.ru/">
-        <input class="send-email__address" type="email" placeholder="E-mail">
+        <label class="visually-hidden">E-mail адрес
+          <input class="send-email__address" type="email" placeholder="E-mail">
+        </label>
         <input class="send-email__submit" type="submit">
       </form>
       <p class="contacts__text">
@@ -240,7 +266,7 @@
         </li>
         <li class="contacts-list__item">
           <img class="contacts-list__item-image" src="img/contacts-mail.svg" width="18" height="13" alt="Электронная почта">
-          <a class="contacts-list__item-link" href="email:">mail@htmlacademy.ru</a>
+          <a class="contacts-list__item-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </li>
       </ul>
       <p class="address">
@@ -253,7 +279,7 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__logo footer-logo">
-      <span class="footer-logo__title">Погнали?</span>
+      <img class="footer-logo__image" src="img/logo-mobile-blue@1x.png" width="100" height="19" alt="Логотип Погнали"/>
     </div>
     <div class="page-footer__social">
       <ul class="social">
@@ -276,8 +302,8 @@
     </div>
     <div class="page-footer__copyright copyright">
       <p class="copyright__text">Разработано</p>
-      <a class="copyright__link" href="#">
-        <img class="copyright__image" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип htmlacademy.ru">
+      <a class="copyright__link" href="http://www.htmlacademy.ru/">
+        <img class="copyright__image" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип htmlacademy.ru">
         <span class="visually-hidden">Htmlacademy.ru</span>
       </a>
     </div>
